# transmission-cleanup-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: args.rs  lib.rs  main.rs
src/logic/: api.rs  database.rs
src/logic/database/: migrations_manager.rs  models.rs
tests/: api.rs  database.rs  end2end.rs
