[package]
name = "file_purge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "file_purge"
path = "src/main.rs"

[lib]
name = "fp"
path = "src/lib.rs"

[dependencies]
base64 = { version = "0.22.1", features = ["std"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
mockito = "1.7.0"
