[package]
name = "file_purge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "file_purge"
path = "src/main.rs"

[lib]
name = "fp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
transmission-rpc = { version = "0.5.0", features = [] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
rusqlite = "0.37.0"
async-trait = "0.1.89"

[dev-dependencies]
mockito = "1.7.0"
base64 = { version = "0.22.1", features = ["std"] }
